@@ -17,54 +17,54 @@
 
 package org.dockbox.hartshorn.events.handle;
 
+import org.dockbox.hartshorn.di.context.element.MethodContext;
+import org.dockbox.hartshorn.di.context.element.TypeContext;
 import org.dockbox.hartshorn.events.EventWrapper;
 import org.dockbox.hartshorn.events.parents.Event;
 import org.dockbox.hartshorn.util.HartshornUtils;
-import org.dockbox.hartshorn.util.Reflect;
 import org.jetbrains.annotations.Nullable;
 
-import java.lang.reflect.Method;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.SortedSet;
 import java.util.TreeSet;
+import java.util.stream.Collectors;
 
 public class EventHandler {
 
-    private final Class<? extends Event> eventType;
+    private final TypeContext<? extends Event> eventType;
 
     private final Set<EventHandler> superTypeHandlers = HartshornUtils.emptySet();
 
-    private final SortedSet<EventWrapperImpl> invokers = new TreeSet<>(EventWrapperImpl.COMPARATOR);
+    private final SortedSet<EventWrapperImpl<?>> invokers = new TreeSet<>(EventWrapperImpl.COMPARATOR);
 
-    private transient volatile EventWrapperImpl @Nullable [] computedInvokerCache;
+    private transient volatile EventWrapperImpl<?> @Nullable [] computedInvokerCache;
 
-    EventHandler(Class<? extends Event> eventType) {
+    EventHandler(final TypeContext<? extends Event> eventType) {
         this.eventType = eventType;
     }
 
-    public List<Method> methods() {
-        return this.invokers.stream().map(EventWrapperImpl::method).toList();
+    public List<MethodContext<?, ?>> methods() {
+        return this.invokers.stream().map(EventWrapperImpl::method).collect(Collectors.toList());
     }
 
-    public void subscribe(EventWrapper invoker) {
+    public void subscribe(final EventWrapper invoker) {
         if (invoker instanceof EventWrapperImpl)
-            this.invalidateCache(this.invokers.add((EventWrapperImpl) invoker));
+            this.invalidateCache(this.invokers.add((EventWrapperImpl<?>) invoker));
     }
 
-    private boolean invalidateCache(boolean modified) {
+    private boolean invalidateCache(final boolean modified) {
         if (modified) this.computedInvokerCache = null;
         return modified;
     }
 
-    public void unsubscribe(EventWrapper invoker) {
+    public void unsubscribe(final EventWrapper invoker) {
         if (invoker instanceof EventWrapperImpl) this.invalidateCache(this.invokers.remove(invoker));
     }
 
-    public void post(Event event, Class<?> target) {
-        EventWrapperImpl[] cache = this.computedInvokerCache;
+    public void post(final Event event, final TypeContext<?> target) {
+        EventWrapperImpl<?>[] cache = this.computedInvokerCache;
         if (null == cache) {
             synchronized (this) {
                 if (null == (cache = this.computedInvokerCache)) {
@@ -73,18 +73,18 @@ public class EventHandler {
             }
         }
 
-        for (EventWrapperImpl invoker : cache) {
+        for (final EventWrapperImpl<?> invoker : cache) {
             // Target is null if no specific target should be checked
             // If the target is present we only want to invoke when the listener matches our target
             if (null == target || invoker.listenerType().equals(target)) invoker.invoke(event);
         }
     }
 
-    private synchronized EventWrapperImpl[] computeInvokerCache() {
-        SortedSet<EventWrapperImpl> set;
+    private synchronized EventWrapperImpl<?>[] computeInvokerCache() {
+        final SortedSet<EventWrapperImpl<?>> set;
         if (this.hasSupertypeHandler()) {
             set = new TreeSet<>(this.invokers);
-            for (EventHandler supertypeHandler : this.superTypeHandlers)
+            for (final EventHandler supertypeHandler : this.superTypeHandlers)
                 set.addAll(supertypeHandler.invokers);
         }
         else {
@@ -97,25 +97,16 @@ public class EventHandler {
         return !this.superTypeHandlers.isEmpty();
     }
 
-    public boolean subtypeOf(EventHandler handler) {
-        if (handler != null) return this.subtypeOf(handler.eventType());
+    public boolean subtypeOf(final EventHandler handler) {
+        if (handler != null) return this.eventType().childOf(handler.eventType());
         return false;
     }
 
-    private boolean subtypeOf(Class<?> cls) {
-        Class<? extends Event> type = this.eventType();
-        return type != cls && Reflect.assigns(cls, type);
-    }
-
-    private Class<? extends Event> eventType() {
+    private TypeContext<? extends Event> eventType() {
         return this.eventType;
     }
 
-    public Set<EventHandler> superTypeHandlers() {
-        return Collections.unmodifiableSet(this.superTypeHandlers);
-    }
-
-    public boolean addSuperTypeHandler(EventHandler handler) {
+    public boolean addSuperTypeHandler(final EventHandler handler) {
         if (handler == null) return false;
         if (handler == this) return false;
         return this.invalidateCache(this.superTypeHandlers.add(handler));
@@ -127,7 +118,7 @@ public class EventHandler {
     }
 
     @Override
-    public boolean equals(Object o) {
+    public boolean equals(final Object o) {
         if (this == o) return true;
         if (!(o instanceof EventHandler)) return false;
         return Objects.equals(this.eventType, ((EventHandler) o).eventType);
@@ -135,6 +126,6 @@ public class EventHandler {
 
     @Override
     public String toString() {
-        return String.format("Handler{%s}", this.eventType.getName());
+        return String.format("Handler{%s}", this.eventType.name());
     }
 }
